--- a/sass/ding_roedovre_color.sass
+++ b/sass/ding_roedovre_color.sass
@@ -58,7 +58,7 @@ $mobile: 600px;
   }
   // Admin menu
   &.admin-menu {
-   // padding-top: $header-height + $colorbar-height !important;
+   padding-top: $header-height + $colorbar-height !important;
     &.search-form-extended.front,
     &.search-form-extended.page-search {
       padding-top: $header-height + $search-form-extended-height + $colorbar-height !important;
