--- a/sass/ding_roedovre_color.sass
+++ b/sass/ding_roedovre_color.sass
@@ -129,7 +129,7 @@ $mobile: 600px;
           }
           // Search Form Extended on frontpage
           @at-root .search-form-extended.front#{&} {
-            top: $topbar-height + $colorbar-height;
+             top: $header-height + $colorbar-height;
           }
           @at-root .search-form-extended.not-front#{&} {
             top: $header-height + $colorbar-height;
@@ -199,10 +199,6 @@ $mobile: 600px;
       // Search Form Extended with admin-menu
       @at-root .search-form-extended.admin-menu#{&} {
         top: $topbar-height + $admin-menu-height + $colorbar-height;
-      }
-      // Search Form Extended on frontpage
-      @at-root .search-form-extended.front#{&} {
-        top: $topbar-height + $search-form-extended-height + $colorbar-height;
       }
       // Search Form Extended on frontpage with toolbar
       @at-root .search-form-extended.front.toolbar#{&} {
