--- a/sass_css/ding_roedovre_color.css
+++ b/sass_css/ding_roedovre_color.css
@@ -1,71 +1,59 @@
 .html:not(.page-admin) {
   padding-top: 162px;
 }
-
 .html:not(.page-admin).toolbar {
   padding-top: 176px !important;
 }
-
 .html:not(.page-admin).toolbar.search-form-extended.front, .html:not(.page-admin).toolbar.search-form-extended.not-front {
   padding-top: 311px !important;
 }
-
 .html:not(.page-admin).toolbar.search-form-extended.not-front.extended-search-is-not-open {
   padding-top: 311px !important;
 }
-
 .html:not(.page-admin).toolbar.has-second-level-menu {
   padding-top: 288px !important;
 }
-
+.html:not(.page-admin).admin-menu {
+  padding-top: 162px !important;
+}
 .html:not(.page-admin).admin-menu.search-form-extended.front, .html:not(.page-admin).admin-menu.search-form-extended.page-search {
   padding-top: 246px !important;
 }
-
 .html:not(.page-admin).admin-menu.has-second-level-menu {
   padding-top: 223px !important;
 }
-
 .html:not(.page-admin).admin-menu.search-form-extended.not-front.extended-search-is-not-open {
   padding-top: 162px;
 }
-
 .html:not(.page-admin).has-second-level-menu {
   padding-top: 223px;
 }
-
 @media screen and (max-width: 950px) {
   .html:not(.page-admin).has-second-level-menu {
-      padding-top: 162px;
+    padding-top: 162px;
   }
 }
-
 .html:not(.page-admin).search-form-extended.front, .html:not(.page-admin).search-form-extended.not-front {
   padding-top: 246px;
 }
-
 @media screen and (max-width: 950px) {
   .html:not(.page-admin).search-form-extended.front, .html:not(.page-admin).search-form-extended.not-front {
-      padding-top: 162px;
+    padding-top: 162px;
   }
 }
-
 .html:not(.page-admin).search-form-extended.front.has-second-level-menu, .html:not(.page-admin).search-form-extended.not-front.has-second-level-menu {
   padding-top: 307px;
 }
-
 @media screen and (max-width: 950px) {
   .html:not(.page-admin).search-form-extended.front.has-second-level-menu, .html:not(.page-admin).search-form-extended.not-front.has-second-level-menu {
-      padding-top: 162px;
+    padding-top: 162px;
   }
 }
-
 .html:not(.page-admin).search-form-extended.not-front.extended-search-is-not-open {
   padding-top: 162px;
 }
-
 .html:not(.page-admin) .site-header .topbar::before {
-  content: '';
+  content: "";
   position: relative;
   z-index: 100;
   display: block;
@@ -75,11 +63,9 @@
   background-size: 100% auto;
   background-repeat-x: no-repeat;
 }
-
 .html:not(.page-admin) .site-header > .header-wrapper {
   top: 78px;
 }
-
 .search-form-extended.toolbar.html:not(.page-admin) .site-header > .header-wrapper .header-inner .pane-search-form {
   top: 59px;
 }
@@ -89,7 +75,7 @@
 }
 
 .search-form-extended.front.html:not(.page-admin) .site-header > .header-wrapper .header-inner .pane-search-form {
-  top: 78px;
+  top: 162px;
 }
 
 .search-form-extended.not-front.html:not(.page-admin) .site-header > .header-wrapper .header-inner .pane-search-form {
@@ -139,13 +125,11 @@
 .html:not(.page-admin) .site-header > .navigation-wrapper {
   top: 78px;
 }
-
 @media screen and (max-width: 950px) {
-  .html:not(.page-admin) .site-header > .navigation-wrapper.has-touch.html:not(.page-admin) .site-header > .navigation-wrapper {
-      top: auto;
+  .html:not(.page-admin) .site-header > .navigation-wrapper {
+    top: auto;
   }
 }
-
 .toolbar.html:not(.page-admin) .site-header > .navigation-wrapper {
   top: 143px;
 }
@@ -164,10 +148,6 @@
 
 .search-form-extended.admin-menu.html:not(.page-admin) .site-header > .navigation-wrapper {
   top: 107px;
-}
-
-.search-form-extended.front.html:not(.page-admin) .site-header > .navigation-wrapper {
-  top: 162px;
 }
 
 .search-form-extended.front.toolbar.html:not(.page-admin) .site-header > .navigation-wrapper {
@@ -192,14 +172,12 @@
 
 @media screen and (max-width: 950px) {
   .html:not(.page-admin) .site-header > .navigation-wrapper .navigation-inner {
-      top: 0;
+    top: 0;
   }
 }
-
 .html:not(.page-admin) .site-header > .navigation-wrapper .navigation-inner .pane-menu-block-main-menu-second-level {
   top: 162px;
 }
-
 .toolbar.html:not(.page-admin) .site-header > .navigation-wrapper .navigation-inner .pane-menu-block-main-menu-second-level {
   top: 227px;
 }
@@ -215,19 +193,17 @@
   -o-transform: translateY(-78px);
   transform: translateY(-78px);
 }
-
 @media screen and (max-width: 950px) {
   .html:not(.page-admin).pane-login-is-open .pane-user-login {
-      -webkit-transform: translateY(162px);
-      -moz-transform: translateY(162px);
-      -ms-transform: translateY(162px);
-      -o-transform: translateY(162px);
-      transform: translateY(162px);
+    -webkit-transform: translateY(162px);
+    -moz-transform: translateY(162px);
+    -ms-transform: translateY(162px);
+    -o-transform: translateY(162px);
+    transform: translateY(162px);
   }
 }
-
 .html:not(.page-admin) .footer::before {
-  content: '';
+  content: "";
   display: block;
   width: 100%;
   height: 14px;
